--- a/iOS-ET/iOS-ET/Base.lproj/Main.storyboard
+++ b/iOS-ET/iOS-ET/Base.lproj/Main.storyboard
@@ -1019,6 +1019,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="9qc-fL-Xxa"/>
         <segue reference="YFE-vk-JDr"/>
         <segue reference="w6R-So-8id"/>
     </inferredMetricsTieBreakers>
